--- a/package.json
+++ b/package.json
@@ -19,8 +19,5 @@
     "autoprefixer": "^9.6.1",
     "postcss-cli": "^6.1.3"
   },
-  "private": true,
-  "dependencies": {
-    "downloadjs": "^1.4.7"
-  }
+  "private": true
 }
