Use .Site.RegularPages for home page
xref: https://github.com/gohugoio/hugo/releases/tag/v0.57.2

Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/config.yaml
+++ b/config.yaml
@@ -28,3 +28,7 @@ params:
   domain_kubeform: https://kubeform.com
   github_url: https://github.com/appscode
   domain_pharmer: https://pharmer.io
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
