--- a/config.yaml
+++ b/config.yaml
@@ -27,7 +27,8 @@ params:
   contact_phone: +1(650)241-8486
   domain_kubeform: https://kubeform.com
   github_url: https://github.com/appscode
-  domain_pharmer: https://pharmer.io
+  domain_pharmer: https://pharmer.cloud
+  domain_stash: https://stash.run
 markup:
   goldmark:
     renderer:
