--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,12 @@
 name: CI
 
 on:
+  pull_request:
+    branches:
+      - "*"
   push:
-    branches-ignore:
-      - "release-*"
-    tags-ignore:
-      - "*.*"
+    branches:
+      - master
 
 jobs:
   build:
@@ -19,16 +20,16 @@ jobs:
 
       - uses: actions/checkout@v1
 
+      - name: Install yq
+        run: |
+          curl -fsSL -o yq https://github.com/mikefarah/yq/releases/download/3.3.0/yq_linux_amd64
+          chmod +x yq
+          sudo mv yq /usr/local/bin/yq
+
       - name: Install Hugo
         run: |
           curl -fsSL -o hugo_extended.deb https://github.com/gohugoio/hugo/releases/download/v0.71.1/hugo_extended_0.71.1_Linux-64bit.deb
           sudo dpkg -i hugo_extended.deb
-
-      - name: Install Hugo Tools
-        run: |
-          curl -fsSL -o hugo-tools https://github.com/appscodelabs/hugo-tools/releases/download/v0.2.15/hugo-tools-linux-amd64
-          chmod +x hugo-tools
-          sudo mv hugo-tools /usr/local/bin/hugo-tools
 
       - name: Install link checker
         run: |
@@ -41,6 +42,8 @@ jobs:
           npm install
 
       - name: Build
+        env:
+          GOOGLE_CUSTOM_SEARCH_API_KEY: ${{ secrets.GOOGLE_CUSTOM_SEARCH_API_KEY }}
         run: make gen-prod
 
       - name: Check links
