add emoji support, changed title
Signed-off-by: shohag <shohagrana@appscode.com>

--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,7 @@ taxonomies:
   author: authors
 disableKinds:
 - taxonomyTerm
+enableemoji: true
 params:
   domain_appscode: https://appscode.com
   domain_kubedb: https://kubedb.com
