--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,12 +10,18 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Use Node.js 10.x
+      - uses: actions/checkout@v1
+
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.16
+        id: go
+
+      - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 10.x
-
-      - uses: actions/checkout@v1
+          node-version: 14.x
 
       - name: Install yq
         run: |
@@ -27,6 +33,16 @@ jobs:
         run: |
           curl -fsSL -o hugo_extended.deb https://github.com/gohugoio/hugo/releases/download/v0.71.1/hugo_extended_0.71.1_Linux-64bit.deb
           sudo dpkg -i hugo_extended.deb
+
+      - name: Install Hugo Tools
+        run: |
+          curl -fsSL -o hugo-tools https://github.com/appscodelabs/hugo-tools/releases/download/v0.2.21/hugo-tools-linux-amd64
+          chmod +x hugo-tools
+          sudo mv hugo-tools /usr/local/bin/hugo-tools
+
+      - name: Install Firebase CLI
+        run: |
+          npm i -g firebase-tools
 
       - name: Install link checker
         run: |
@@ -47,3 +63,13 @@ jobs:
         run: |
           hugo server --minify --config=config.yaml &>/dev/null &
           liche -r public -d http://localhost:1313 -c 10 -p -l -x '^(.*github.com.*|.*linkedin.com.*)$' || true
+
+      - name: Release
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          GOOGLE_CUSTOM_SEARCH_API_KEY: ${{ secrets.GOOGLE_CUSTOM_SEARCH_API_KEY }}
+        # if: startsWith(github.event.ref, 'refs/tags/') && (contains(github.ref, '-alpha.') || contains(github.ref, '-beta.')) == false
+        run: |
+          npm install
+          make docs
+          make release
