preview draft and future posts
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/.github/workflows/preview-website.yml
+++ b/.github/workflows/preview-website.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           npm install
           make docs
-          make gen-prod
+          make gen-draft
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
