Map discussion with title instead of URL
Signed-off-by: Emruz Hossain <emruz@appscode.com>

--- a/config.yaml
+++ b/config.yaml
@@ -39,6 +39,7 @@ params:
       repoId: "R_kgDOG-h6rw"
       category: Blog
       categoryId: "DIC_kwDOG-h6r84COCFp"
+      map: title
 markup:
   goldmark:
     renderer:
