--- a/.github/workflows/preview-website.yml
+++ b/.github/workflows/preview-website.yml
@@ -47,12 +47,12 @@ jobs:
           chmod +x hugo-tools
           sudo mv hugo-tools /usr/local/bin/hugo-tools
 
-      - name: Update docs
+      - name: Update assets
         env:
           GOOGLE_CUSTOM_SEARCH_API_KEY: ${{ secrets.GOOGLE_CUSTOM_SEARCH_API_KEY }}
         run: |
           npm install
-          make docs
+          make assets
           make gen-draft
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
