Pin firebase-tools@v11.13.0
xref: https://github.com/firebase/firebase-tools/pull/5077

Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Install Firebase CLI
         run: |
-          npm i -g firebase-tools
+          npm i -g firebase-tools@v11.13.0
 
       # - name: QA
       #   env:
