--- a/config.dev.yaml
+++ b/config.dev.yaml
@@ -15,8 +15,9 @@ params:
   domain_kubevault: https://kubevault-v1-hugo.web.app
   domain_kubeci: https://kubeci-v1-hugo.web.app
   domain_kubeshield: https://kubeshield-v1-hugo.web.app
-  domain_bytebuilders: https://byte.builders
-  domain_marketplace: https://marketplace.byte.builders
+  domain_bytebuilders: https://appscode.ninja
+  domain_accounts: https://accounts.appscode.ninja
+  domain_marketplace: https://marketplace.appscode.ninja
   search_engine_ID: 015199383701854252104:jccvu4eiulw
   search_api_key: _replace_
   blog_url: https://blog.byte.builders
