--- a/config.yaml
+++ b/config.yaml
@@ -16,6 +16,7 @@ params:
   domain_kubeci: https://kube.ci
   domain_kubeshield: https://kubeshield.com
   domain_bytebuilders: https://byte.builders
+  domain_accounts: https://accounts.byte.builders
   domain_marketplace: https://marketplace.byte.builders
   search_engine_ID: 015199383701854252104:jccvu4eiulw
   search_api_key: _replace_
