--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,3 +75,22 @@ jobs:
           npm install
           make assets
           make release
+
+      - name: Update search index
+        env:
+          MEILISEARCH_ADMIN_API_KEY: ${{ secrets.MEILISEARCH_ADMIN_API_KEY }}
+        # if: startsWith(github.event.ref, 'refs/tags/') && (contains(github.ref, '-alpha.') || contains(github.ref, '-beta.')) == false
+        run: |
+          curl \
+            -X POST 'https://search.docs.appscode.com/indexes' \
+            -H "Authorization: Bearer $MEILISEARCH_ADMIN_API_KEY" \
+            -H 'Content-Type: application/json' \
+            --data-binary '{
+              "uid": "blog",
+              "primaryKey": "documentId"
+            }'
+          curl \
+            -X POST 'https://search.docs.appscode.com/indexes/blog/documents' \
+            -H "Authorization: Bearer $MEILISEARCH_ADMIN_API_KEY" \
+            -H 'Content-Type: application/json' \
+            --data-binary @public/index.json
