--- a/config.dev.yaml
+++ b/config.dev.yaml
@@ -15,11 +15,11 @@ params:
   domain_kubevault: https://kubevault-v1-hugo.web.app
   domain_kubeci: https://kubeci-v1-hugo.web.app
   domain_kubeshield: https://kubeshield-v1-hugo.web.app
-  domain_bytebuilders: https://appscode.ninja
+  domain_bytebuilders: https://byte.builders
   domain_accounts: https://accounts.appscode.ninja
-  domain_marketplace: https://marketplace.appscode.ninja
+  domain_marketplace: https://marketplace.byte.builders
   search_engine_ID: 015199383701854252104:jccvu4eiulw
-  search_api_key: _replace_
+  search_api_key: AIzaSyBrcwLTnL09geNrFMUx1kpL--dT1379aag
   blog_url: https://blog.byte.builders
   slack_url: https://slack.appscode.com
   twitter_url: https://twitter.com/AppsCodeHQ
