--- a/config.dev.yaml
+++ b/config.dev.yaml
@@ -1,4 +1,4 @@
-baseURL: https://blog.byte.builders/
+baseURL: https://blog-v1-hugo.web.app/blog/
 languageCode: en-us
 title: ByteBuilders Blog
 assetDir: static
@@ -10,6 +10,7 @@ disableKinds:
 - taxonomyTerm
 enableEmoji: true
 params:
+  basePath: /blog/
   domain_appscode: https://appscode-v3-hugo.web.app
   domain_kubedb: https://kubedb-v2-hugo.web.app
   domain_kubevault: https://kubevault-v1-hugo.web.app
@@ -20,7 +21,7 @@ params:
   domain_marketplace: https://marketplace.byte.builders
   search_engine_ID: 015199383701854252104:jccvu4eiulw
   search_api_key: AIzaSyBrcwLTnL09geNrFMUx1kpL--dT1379aag
-  blog_url: https://blog.byte.builders
+  blog_url: https://blog-v1-hugo.web.app/blog/
   slack_url: https://slack.appscode.com
   twitter_url: https://twitter.com/AppsCodeHQ
   facebook_url: https://www.facebook.com/appscode
