--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://blog.byte.builders/
+baseURL: https://blog.byte.builders/blog/
 languageCode: en-us
 title: Blog | ByteBuilders
 assetDir: static
@@ -10,6 +10,7 @@ disableKinds:
 - taxonomyTerm
 enableEmoji: true
 params:
+  basePath: /blog/
   domain_appscode: https://appscode.com
   domain_kubedb: https://kubedb.com
   domain_kubevault: https://kubevault.com
@@ -20,7 +21,7 @@ params:
   domain_marketplace: https://marketplace.byte.builders
   search_engine_ID: 015199383701854252104:jccvu4eiulw
   search_api_key: _replace_
-  blog_url: https://blog.byte.builders
+  blog_url: https://blog.byte.builders/blog/
   slack_url: https://slack.appscode.com
   twitter_url: https://twitter.com/AppsCodeHQ
   facebook_url: https://www.facebook.com/appscode
