--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://blog.byte.builders/blog/
+baseURL: https://byte.builders/blog/
 languageCode: en-us
 title: Blog | ByteBuilders
 assetDir: static
@@ -19,7 +19,7 @@ params:
   domain_bytebuilders: https://byte.builders
   domain_accounts: https://accounts.byte.builders
   domain_marketplace: https://marketplace.byte.builders
-  blog_url: https://blog.byte.builders/blog/
+  blog_url: https://byte.builders/blog/
   slack_url: https://slack.appscode.com
   twitter_url: https://twitter.com/AppsCodeHQ
   facebook_url: https://www.facebook.com/appscode
