Use separate redirect rules for preview env
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/.github/workflows/preview-website.yml
+++ b/.github/workflows/preview-website.yml
@@ -55,6 +55,7 @@ jobs:
           npm install
           make assets
           make gen-draft
+          mv .github/firebase.json firebase.json
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
