--- a/.github/workflows/preview-website.yml
+++ b/.github/workflows/preview-website.yml
@@ -62,6 +62,6 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_QA }}'
           projectId: kubedb-new-e7965
           # target: kubedb-new-e7965
-          # entryPoint: '.'
+          entryPoint: '.github'
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
