--- a/config.dev.yaml
+++ b/config.dev.yaml
@@ -19,7 +19,7 @@ params:
   domain_bytebuilders: https://byte.builders
   domain_accounts: https://accounts.appscode.ninja
   domain_marketplace: https://marketplace.byte.builders
-  blog_url: https://blog-v1-hugo.web.app/blog/
+  blog_url: https://blog.byte.builders
   slack_url: https://slack.appscode.com
   twitter_url: https://twitter.com/AppsCodeHQ
   facebook_url: https://www.facebook.com/appscode
