--- a/firebase.json
+++ b/firebase.json
@@ -11,19 +11,19 @@
       "trailingSlash": true,
       "redirects": [ {
         "source": "/",
-        "destination": "https://byte.builders/blog/",
+        "destination": "https://appscode.com/blog/",
         "type": 301
       }, {
         "source": "/post/:post*",
-        "destination": "https://byte.builders/blog/post/:post",
+        "destination": "https://appscode.com/blog/post/:post",
         "type": 301
       }, {
         "source": "/authors/:post*",
-        "destination": "https://byte.builders/blog/authors/:post",
+        "destination": "https://appscode.com/blog/authors/:post",
         "type": 301
       }, {
         "source": "/tags/:post*",
-        "destination": "https://byte.builders/blog/tags/:post",
+        "destination": "https://appscode.com/blog/tags/:post",
         "type": 301
       } ]
     }
