--- a/config.yaml
+++ b/config.yaml
@@ -16,9 +16,9 @@ params:
   domain_kubevault: https://kubevault.com
   domain_kubeci: https://kube.ci
   domain_kubeshield: https://kubeshield.com
-  domain_bytebuilders: https://byte.builders
-  domain_accounts: https://accounts.byte.builders
-  domain_marketplace: https://marketplace.byte.builders
+  domain_bytebuilders: https://appscode.com
+  domain_accounts: https://accounts.appscode.com
+  domain_marketplace: https://marketplace.appscode.com
   blog_url: https://blog.appscode.com
   slack_url: https://slack.appscode.com
   twitter_url: https://twitter.com/AppsCodeHQ
