--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bytebuilders-static",
+  "name": "bytebuilders-blog",
   "version": "0.0.1",
-  "description": "byte.builders",
+  "description": "AppsCode Blog",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
