--- a/config.dev.yaml
+++ b/config.dev.yaml
@@ -16,10 +16,10 @@ params:
   domain_kubevault: https://kubevault-v1-hugo.web.app
   domain_kubeci: https://kubeci-v1-hugo.web.app
   domain_kubeshield: https://kubeshield-v1-hugo.web.app
-  domain_bytebuilders: https://byte.builders
+  domain_bytebuilders: https://appscode.com
   domain_accounts: https://accounts.appscode.ninja
-  domain_marketplace: https://marketplace.byte.builders
-  blog_url: https://blog.byte.builders
+  domain_marketplace: https://marketplace.appscode.com
+  blog_url: https://appscode.com/blog
   slack_url: https://slack.appscode.com
   twitter_url: https://twitter.com/AppsCodeHQ
   facebook_url: https://www.facebook.com/appscode
