--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ concurrency:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v1
 
@@ -54,7 +54,7 @@ jobs:
 
       - name: Install Firebase CLI
         run: |
-          npm i -g firebase-tools@v11.13.0
+          npm i -g firebase-tools
 
       # - name: QA
       #   env:
