--- a/config.dev.yaml
+++ b/config.dev.yaml
@@ -21,7 +21,7 @@ params:
   domain_marketplace: https://marketplace.appscode.com
   blog_url: https://appscode.com/blog
   slack_url: https://slack.appscode.com
-  twitter_url: https://twitter.com/AppsCodeHQ
+  twitter_url: https://x.com/AppsCodeHQ
   facebook_url: https://www.facebook.com/appscode
   youtube_url: https://www.youtube.com/c/AppsCodeInc
   contact_email: support@appscode.com
