--- a/data/config.json
+++ b/data/config.json
@@ -6,7 +6,7 @@
       "images": "static/assets/images"
     },
     "repoURL": "https://github.com/appscode/static-assets",
-    "version": "master"
+    "version": "prof-obay"
   },
   "clouds": [
     "aws",
@@ -59,6 +59,10 @@
     "c1": [
       "kubevault",
       "voyager"
+    ],
+    "c2": [
+      "configsyncer",
+      "guard"
     ]
   },
   "products": []
