--- a/config.yaml
+++ b/config.yaml
@@ -33,7 +33,7 @@ params:
   comments:
     enable: true
     giscus:
-      repo: bytebuilders/community
+      repo: appscode/community
       repoId: R_kgDOG-h6rw
       category: Blog
       categoryId: DIC_kwDOG-h6r84COCFp
