--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,4 +93,4 @@ jobs:
             -X POST 'https://search.docs.appscode.com/indexes/blog/documents' \
             -H "Authorization: Bearer $MEILISEARCH_ADMIN_API_KEY" \
             -H 'Content-Type: application/json' \
-            --data-binary @public/index.json
+            --data-binary @public/blog/index.json
